force-app/main/default/objects/Qubika_Employee__c/Qubika_Employee__c.object-meta.xml
<CustomObject>
    <label>Qubika Portal Employee</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qubika Portal Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>