force-app/main/default/objects/Qubika_Employee__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>SalaryData</fullName>
            </value>
            <value>
                <fullName>UserData</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>