force-app/main/default/objects/Qubika_Employee__c/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <label>Verification Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>